--- a/css/style.css
+++ b/css/style.css
@@ -904,7 +904,7 @@ header .nav-menu .social-links .social-link:hover {
 header .nav-menu .copy {
 	color: #888;
 	font-size: 15px;
-	margin-bottom: 0;
+	margin-bottom: 20px;
 }
 
 header .logo {
