--- a/css/tan-color.css
+++ b/css/tan-color.css
@@ -19,115 +19,115 @@
 ****************************************************************/
 
 header .social-links .social-link:hover {
-    color: #F5AE51;
+    color: #008800;
 }
 
 header .logo:before {
-    background-color: #F5AE51;
+    background-color: black;
 }
 
 header .menu-button:before {
-    background-color: #F5AE51;
+    background-color: black;
 }
 
 .main-btn {
-    color: #F5AE51;
-    border-color: #F5AE51;
+    color: #008800;
+    border-color: #008800;
 }
 
 .main-btn:hover {
-    background-color: #F5AE51;
-    border-color: #F5AE51;
+    background-color: #008800;
+    border-color: #008800;
 }
 
 blockquote {
-    border-color: #F5AE51;
+    border-color: #008800;
 }
 
 .sub-heading h3:before {
-    background: #F5AE51;
+    background: #008800;
 }
 
 .preloader .loading-text span:before {
-    color: #F5AE51;
+    color: #008800;
 }
 
 .section-about .about-info p strong {
-    color: #F5AE51;
+    color: #008800;
 }
 
 .section-about .about-info .about-list li .title:before {
-    background-color: #F5AE51;
+    background-color: #008800;
 }
 
 .section-about .services .service-item i {
-    color: #F5AE51;
+    color: #008800;
 }
 
 .section-about .testimonials .testimonial-item .description:before {
-    color: #F5AE51;
+    color: #008800;
 }
 
 .section-about .testimonials .testimonial-item .rating li {
-    color: #F5AE51;
+    color: #008800;
 }
 
 .section-blog .blog-item .post-content .cat {
-    color: #F5AE51;
+    color: #008800;
 }
 
 .section-contact .contact-detail .contact-info li .title:before {
-    background-color: #F5AE51;
+    background-color: #008800;
 }
 
 .section-contact .contact-detail .social-media h4:before {
-    background-color: #F5AE51;
+    background-color: #008800;
 }
 
 .page.section-home .banner-text .animate-title {
-    color: #F5AE51;
+    color: #ffffff;
 }
 
 .section-portfolio .portfolio-filter ul li.active {
-    background-color: #F5AE51;
+    background-color: #008800;
 }
 
 .section-portfolio .portfolio-items .item figure {
-    background: #F5AE51;
+    background: #008800;
 }
 
 .section-resume .experience,
 .section-resume .education {
-    border-color: #F5AE51;
+    border-color: #008800;
 }
 
 .section-resume .experience h5,
 .section-resume .education h5 {
-    color: #F5AE51;
+    color: #008800;
 }
 
 .section-resume .experience .event:after,
 .section-resume .education .event:after {
-    -webkit-box-shadow: 0 0 0 4px #F5AE51;
-    box-shadow: 0 0 0 4px #F5AE51;
+    -webkit-box-shadow: 0 0 0 4px #008800;
+    box-shadow: 0 0 0 4px #008800;
 }
 
 .section-resume .skills .skill-item .progress .progress-bar:after {
-    border-color: #F5AE51;
+    border-color: #008800;
 }
 
 .section-resume .skills .skill-item .progress .progress-bar {
-    background-color: #F5AE51;
+    background-color: #008800;
 }
 
 header .back-button:before {
-    background-color: #F5AE51;
+    background-color: #008800;
 }
 
 .single-blog .blog-category li {
-    border-color: #F5AE51;
+    border-color: #008800;
 }
 
 .single-blog .blog-category li a {
-    color: #F5AE51;
+    color: #008800;
 }
